@@ -12,6 +12,10 @@ Changes:
 * default in `makeDendrogram` is now `dimReduce="mad"` to avoid accidentally calling it with `dimReduce="none"` (previous default), which can kill interactive R sessions.
 * Change default in `plotHeatmap` to `clusterSamplesData="dendrogramValue"`.
 * Change handling of `clusterSamplesData` argument in `plotHeatmap` so that if argument equals `dendrogramValue` or `primaryCluster` and gives bad results / errors, will give warning and change argument appropriately. 
+* `mergeClusters` now suppresses warnings created by the estimation of the percentage non-null unless `showWarnings=TRUE`. 
+
+Bugs:
+* Arguments passed to `mergeClusters`, ClusterExperiment version, via the `...` command will now go first to the `mergeClusters` matrix version and then onto the plotting, as stated in documentation (plotting arguments were being ignored on the clusterExperiment version of the function). 
 
 Changes in version 1.3.4 ( Release date: 2017-09-28)
 ==============
